--- a/style/blog.css
+++ b/style/blog.css
@@ -82,7 +82,7 @@
 }
 
 .footer__page {
-    display: inline-block;
+    display: flex;
     width: 36px;
     height: 36px;
     border: 2px solid #2D2D2D;
@@ -91,9 +91,9 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    line-height: 1.3;
     padding: 0;
-    padding-top: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width: 1900px) {
@@ -111,5 +111,193 @@
 
     .blog__list {
         gap: 80px;
+    }
+}
+
+@media (max-width: 1580px) {
+    .blog {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .blog__title {
+        font-size: 28px;
+    }
+}
+
+@media (max-width: 1390px) {
+    .blog__title {
+        font-size: 24px;
+    }
+
+    .footer__page {
+        width: 32px;
+        height: 32px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 1160px) {
+    .blog__img {
+        max-width: 165px;
+    }
+
+    .blog__title {
+        font-size: 20px;
+    }
+
+    .footer__page {
+        width: 32px;
+        height: 32px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 1020px) {
+    .blog {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .blog__list {
+        gap: 50px;
+        margin-bottom: 70px;
+    }
+
+    .blog__img {
+        max-width: 140px;
+    }
+
+    .blog__title {
+        font-size: 18px;
+    }
+
+    .footer__page {
+        width: 28px;
+        height: 28px;
+        font-size: 12px;
+        border-width: 1px;
+    }
+}
+
+@media (max-width: 855px) {
+
+    .blog__item {
+        gap: 16px;
+    }
+
+    .blog__img {
+        max-width: 120px;
+    }
+
+    .blog__content {
+        line-height: 1.1;
+    }
+
+    .blog__title {
+        font-size: 14px;
+    }
+
+    .blog__data {
+        font-size: 12px;
+    }
+
+    .blog__info {
+        grid-template-columns: repeat(2, 1fr);
+        font-size: 12px;
+        gap: 5px;
+    }
+
+    .blog__info-view,
+    .blog__info-comment {
+        background-size: 16px;
+        padding-left: 20px;
+    }
+
+    .footer__btn {
+        width: 24px;
+        height: 24px;
+    }
+
+    .blog__footer {
+        gap: 20px;
+    }
+
+    .footer__page {
+        width: 20px;
+        height: 20px;
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 675px) {
+    .blog {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .blog__item {
+        gap: 10px;
+    }
+
+    .blog__img {
+        max-width: 80px;
+    }
+
+    .blog__title {
+        font-size: 12px;
+    }
+
+    .blog__data,
+    .blog__info {
+        font-size: 10px;
+    }
+
+    .blog__info-view,
+    .blog__info-comment {
+        background-size: 14px;
+        padding-left: 16px;
+    }
+}
+
+@media (max-width: 520px) {
+
+    .blog__list {
+        gap: 12px;
+        margin-bottom: 30px;
+    }
+
+    .blog__img {
+        max-width: 60px;
+    }
+
+    .blog__title {
+        font-size: 8px;
+    }
+
+    .blog__data,
+    .blog__info {
+        font-size: 5px;
+    }
+
+    .blog__info-view,
+    .blog__info-comment {
+        background-size: 8px;
+        padding-left: 10px;
+    }
+
+    .blog__footer {
+        gap: 10px;
+    }
+
+    .footer__btn {
+        width: 16px;
+        height: 16px;
+    }
+
+    .footer__page {
+        width: 16px;
+        height: 16px;
+        font-size: 6px;
     }
 }
