--- a/style/style.css
+++ b/style/style.css
@@ -118,3 +118,28 @@ fieldset {
         padding: 100px 70px;
     }
 }
+
+@media (max-width: 1580px) {
+    .container {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
+
+@media (max-width: 1020px) {
+    .container {
+        padding: 60px 20px;
+    }
+}
+
+@media (max-width: 855px) {
+    .container {
+        padding: 50px 10px;
+    }
+}
+
+@media (max-width: 520px) {
+    .container {
+        padding: 21px 5px;
+    }
+}
