--- a/style/blog.css
+++ b/style/blog.css
@@ -304,41 +304,12 @@
 
 @media (max-width: 520px) {
     .blog__list {
-        gap: 12px;
         margin-bottom: 30px;
-    }
-
-    .blog__img {
-        max-width: 60px;
-    }
-
-    .blog__title {
-        font-size: 8px;
-    }
-
-    .blog__data,
-    .blog__info {
-        font-size: 5px;
-    }
-
-    .blog__info-view,
-    .blog__info-comment {
-        background-size: 8px;
-        padding-left: 10px;
-    }
-
-    .blog__footer {
-        gap: 10px;
+        grid-template-columns: 1fr;
     }
 
     .footer__btn {
         width: 16px;
         background-size: 16px;
-    }
-
-    .footer__page {
-        width: 16px;
-        height: 16px;
-        font-size: 6px;
     }
 }
